--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>ÓptimaOps Consultora · Administración de Operaciones</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon-optimaops.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="favicon-optimaops.png">
-  <link rel="icon" type="image/png" href="favicon-optimaops.png" sizes="192x192">
+  <link rel="icon" href="favicon-optimaops.png?v=2" type="image/png">
+  <link rel="shortcut icon" href="favicon-optimaops.png?v=2" type="image/png">
+  <link rel="apple-touch-icon" href="favicon-optimaops.png?v=2">
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -521,3 +522,4 @@
   </div>
 </body>
 </html>
+
