--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
       width:42px;
       height:42px;
       object-fit:contain;
-      filter:drop-shadow(0 0 12px rgba(255,204,0,0.8));
       margin-right:0.35rem;
     }
 
@@ -343,7 +342,6 @@
       width:34px;
       height:34px;
       object-fit:contain;
-      filter:drop-shadow(0 0 8px rgba(255,204,0,0.7));
       margin-right:0.4rem;
     }
 
@@ -428,7 +426,7 @@
           <!-- Logo en el caso -->
           <img src="logo-optimaops.png"
                alt="ÓptimaOps"
-               style="width:60px;margin-bottom:0.7rem;filter:drop-shadow(0 0 10px rgba(255,204,0,0.7));">
+               style="width:60px;margin-bottom:0.7rem;>
 
           <div class="card-tag">Resumen</div>
           <p style="font-size:0.86rem;">
@@ -522,5 +520,6 @@
   </div>
 </body>
 </html>
+
 
 
