--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           <!-- Logo en el caso -->
           <img src="logo-optimaops.png"
                alt="ÓptimaOps"
-               style="width:60px;margin-bottom:0.7rem;>
+               style="width:60px;margin-bottom:0.7rem;">
 
           <div class="card-tag">Resumen</div>
           <p style="font-size:0.86rem;">
@@ -520,6 +520,7 @@
   </div>
 </body>
 </html>
+
 
 
 
